Add modal for successful purchase and enhance cart functionality

--- a/css/styles.css
+++ b/css/styles.css
@@ -337,7 +337,8 @@ button[type="submit"]:active {
 }
 
 .product-card button:hover,
-.modal button:hover {
+.modal button:hover,
+.offer-card button:hover {
   background-color: #d9ddcd;
 }
 
@@ -865,8 +866,8 @@ button[type="submit"]:active {
   }
 
   .producto-carrito img {
-    max-width: 120px; /* Aumenta el tamaño de la imagen */
-    max-height: 120px; /* Aumenta el tamaño de la imagen */
+    max-width: 120px;
+    max-height: 120px;
     margin-right: 0;
     margin-bottom: 10px;
   }
@@ -910,4 +911,49 @@ button[type="submit"]:active {
     width: 100%;
     margin-top: 10px;
   }
+}
+
+.modal {
+  display: none; /* Inicialmente oculto */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: white;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px;
+}
+
+.modal-close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#vaciar-carrito,
+#finalizar-compra {
+  display: block;
+}
+
+#vaciar-carrito.hidden,
+#finalizar-compra.hidden {
+  display: none;
 }
